Improvements to the FRONT END
Fixed Header, Featured slider

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ Goal: A clean, functional starter that looks more substantial than a barebones p
   </header>
 
   <!-- ===== Featured slider -> Scrolling images on top of HOMEPAGE ===== -->
+   
   <section class="featured" aria-label="Seçilmiş sistemlər və məhsullar">
     <!-- Viewport: CSS should set overflow:hidden and relative sizing -->
     <div class="featured__wrap">
@@ -131,11 +132,11 @@ Goal: A clean, functional starter that looks more substantial than a barebones p
         <!--
         Each slide is a <figure>: image + caption.
         Tip: keep images same aspect ratio for smoother sliding.
-      -->
+        -->
 
         <!-- Slide 1 -->
         <figure class="featured__slide" role="group" aria-roledescription="slide" aria-label="1 / 5">
-          <img src="./assets/cat-liftslideKNG.png" alt="KNG qapı tutacağı" />
+          <img src="./assets/cat-liftslideKNG.JPG" alt="KNG qapı tutacağı" />
           <figcaption class="featured__caption">
             KNG HBSB Qapı Sistemi
           </figcaption>
@@ -143,7 +144,7 @@ Goal: A clean, functional starter that looks more substantial than a barebones p
 
         <!-- Slide 2 -->
         <figure class="featured__slide" role="group" aria-roledescription="slide" aria-label="2 / 5">
-          <img src="./assets/cat-doors.png" alt="KNG çift açılım pəncərə sistemi" />
+          <img src="./assets/cat-doors.JPG" alt="KNG çift açılım pəncərə sistemi" />
           <figcaption class="featured__caption">
             KNG Çift Açılım Pəncərə Sistemi
           </figcaption>
